# Open-Godot-MCP

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  GITHUB_REPO_METADATA.md  LICENSE  README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.md  README.nl.md  README.pl.md  README.pt-BR.md  README.ru.md  README.th.md  README.tr.md  README.uk.md  README.vi.md  README.zh-CN.md  README_EN.md  pyproject.toml
.agents/: COMMANDER.md  DISPATCH_TEMPLATES.md  PERSONA_TEMPLATE.md  config.json
.agents/canon/: BOOT_PROTOCOL.md  CORE_CANON.md  LOOP_PROTOCOL.md  MEMORY_PROTOCOL.md  REDLINES.md  VERIFICATION_PROTOCOL.md
.agents/personas/: git_workflow_master.md
.agents/scripts/: ahd_session.py  plan_dispatch.py  pre_task_audit.py  worktree.py
.agents/skills/: auditor.md  comment_checker.md  fable-judge.md  harness-sensor.md  init_deep.md  loop-memory.md  memory-audit.md  using-skills.md
.agents/workers/: AUDITOR.md  BUILDER.md  MEMORY_KEEPER.md  SCOUT.md  VERIFIER.md
.codex/: instructions.md
.codex/agents/: COMMANDER.md  DISPATCH_TEMPLATES.md  PERSONA_TEMPLATE.md
.codex/canon/: BOOT_PROTOCOL.md  CAVEMAN_PROTOCOL.md  CORE_CANON.md  HANDOFF_LETTER.md  JUDGMENT_RUBRICS.md  LOOP_PROTOCOL.md  MEMORY_PROTOCOL.md  REDLINES.md  VERIFICATION_PROTOCOL.md
.codex/hooks/: ahd_session.py.bak  post_tool_use.py  pre_tool_use.py  stop.py
.codex/scripts/: ahd_session.py  loop_memory_sync.py  memory_audit.py  plan_dispatch.py  pre_task_audit.py  session_manager.py  worktree.py
.codex/skills/: auditor.md  comment_checker.md  context-compactor.md  fable-judge.md  harness-sensor.md  init_deep.md  loop-memory.md  memory-audit.md  user-preference.md  using-skills.md
.devin/: AGENTS.md  config.json
.devin/agents/: COMMANDER.md  DISPATCH_TEMPLATES.md  PERSONA_TEMPLATE.md
.github/: asset-template.json.hb
.hermes/: AGENTS.md  config.yaml
Docs/: README.md
scripts/: gen_dock_i18n.py  generate_icon.ps1
tests/: test_agnes_config.py  test_agnes_tools.py  test_bridge_reconnect.py  test_error_codes.py  test_game_instance_routing.py  test_port_resolver.py  test_server.py  test_variant_codec.py
(+385 files in other folders)
